--- a/docker/nginx/conf.d/www.conf
+++ b/docker/nginx/conf.d/www.conf
@@ -3,6 +3,12 @@ server {
     root         /var/www/webapp;
 
     index index.html index.htm index.php;
+    error_page 404 /404.html;
+
+    location /404 {
+        root    /var/www/webapp;
+        internal;
+    }
 
     location /static/ {
         autoindex on;
@@ -19,7 +25,10 @@ server {
         fastcgi_pass unix:/var/run/www.sock;
         fastcgi_index index.php;
         include fastcgi.conf;
+
+        fastcgi_intercept_errors on;
     }
+
 
     access_log /var/log/nginx/blogs-access.log;
     error_log  /var/log/nginx/blogs-error.log error;
